--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dynie 4Life</title>
+    <title>Mapa poszukiwaczy skarbów GTA:SA</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="topbar">
-      <h1>Mapka dyn 4Life</h1>
+      <h1>Mapa poszukiwaczy skarbów GTA:SA</h1>
       <div class="actions-left" aria-label="Szybkie akcje">
         <button id="actionsToggle" class="btn actions-toggle" aria-expanded="false" aria-controls="actionsPanel" title="Pokaż akcje">≡</button>
         <div id="actionsPanel" class="actions-panel" hidden>
@@ -111,7 +111,8 @@
         Dziękujemy każdej osobie za wsparcie i udostępnione ss.
         <br />
         <ul class="thanks-list">
-          <li>❤️ Listy nie ma ESZ</li>
+          <li>❤️Anonymous detergenci internetowi
+ </li>
         </ul>
       </div>
     </template>
