--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
           <button id="exportJsonBtn" class="btn" title="Pobierz markers.json">Pobierz Punkty<span class="btn-sub">(Tylko Po Zalogowaniu)</span></button>
           <button id="actionThanksBtn" class="btn" title="Podziękowania">Podziękowania</button>
           <button id="actionRespBtn" class="btn" title="Możliwe respy dyń">Możliwe respy dyń</button>
-          <div id="profileAvatar" class="profile-avatar" aria-controls="profilePanel" aria-expanded="false" title="Profil">
-            <img id="profileAvatarImg" class="profile-avatar-img" alt="Avatar" />
-            <span id="profileAvatarName" class="profile-avatar-name"></span>
-            <span class="chevron">▾</span>
-          </div>
+          
           <div id="profilePanel" class="accordion-panel" hidden>
             <div class="accordion-content">
               <div id="profileUser" class="profile-user"></div>
@@ -45,6 +41,9 @@
         <span id="userIndicator" class="user-indicator"></span>
         <input id="importJsonInput" type="file" accept="application/json" class="hidden" />
       </div>
+    </div>
+    <div id="profileBadge" class="profile-badge" aria-controls="profilePanel" aria-expanded="false" title="Profil">
+      <img id="profileBadgeImg" alt="Avatar" />
     </div>
     
 
