--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
           <button id="exportJsonBtn" class="btn" title="Pobierz markers.json">Pobierz Punkty<span class="btn-sub">(Tylko Po Zalogowaniu)</span></button>
           <button id="actionThanksBtn" class="btn" title="Podziękowania">Podziękowania</button>
           <button id="actionRespBtn" class="btn" title="Możliwe respy dyń">Możliwe respy dyń</button>
-          
-          <div id="profilePanel" class="accordion-panel" hidden>
-            <div class="accordion-content">
-              <div id="profileUser" class="profile-user"></div>
-              <div class="profile-actions">
-                <button id="editToggleBtn" class="btn">Login</button>
-                <button id="discordLogoutBtn" class="btn hidden">Wyloguj</button>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="help">  
@@ -44,6 +34,10 @@
     </div>
     <div id="profileBadge" class="profile-badge" aria-controls="profilePanel" aria-expanded="false" title="Profil">
       <img id="profileBadgeImg" alt="Avatar" />
+    </div>
+    <div id="profileMenu" class="profile-menu" hidden>
+      <button id="editToggleBtn" class="btn">Login</button>
+      <button id="discordLogoutBtn" class="btn hidden">Wyloguj</button>
     </div>
     
 
