--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <img id="profileBadgeImg" alt="Avatar" />
     </div>
     <div id="profileMenu" class="profile-menu" hidden>
-      <button id="editToggleBtn" class="btn">Login</button>
-      <button id="discordLogoutBtn" class="btn hidden">Wyloguj</button>
+      <button id="editToggleBtn" class="btn primary">Przełącz edycję</button>
+      <button id="discordLogoutBtn" class="btn danger hidden">Wyloguj</button>
     </div>
     
 
