--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
       <div class="support-subtext">Dziękujemy za wsparcie każdej osobie która podesłała ss`y ( Anonimowość jest w 100% ).❤️</div>
     </div>
 
+    <div id="pageClock" class="page-clock" aria-label="Data i godzina"></div>
+
     <div id="infoModal" class="info-modal hidden" role="dialog" aria-label="Informacje">
       <button id="infoModalClose" class="info-modal-close" aria-label="Zamknij">✕</button>
       <div id="infoModalContent" class="info-modal-content"></div>
